--- a/product.html
+++ b/product.html
@@ -75,44 +75,57 @@
           </ul>
         </div>
 
-
-
         <nav class="navigation-menu">
           <ul class="navigation-list">
-            <li class="navigation-item ">
+            <li class="navigation-item menu">
               <a class="catalog-toggler" href="product.html"><span>Каталог товаров</span>
-
-                <svg class=" toggler toggler-plus" aria-hidden="true" focusable="false" width="50" height="50"
-                  viewBox="0 0 50 50" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <circle opacity="1" cx="25" cy="25" r="24" stroke="black" stroke-width="2" />
-                  <g opacity="1" clip-path="url(#clip0_31404_601)">
-                    <path d="M33 24H26V17H24V24H17V26H24V33H26V26H33V24Z" fill="black" />
-                  </g>
-                  <defs>
-                    <clipPath id="clip0_31404_601">
-                      <rect width="16" height="16" fill="white" transform="translate(17 17)" />
-                    </clipPath>
-                  </defs>
-                </svg>
-
-
-                <svg class="toggler toggler-minus" aria-hidden="true" focusable="false" width="50" height="51"
-                  viewBox="0 0 50 51" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <path
-                    d="M49 25.787C49 39.0418 38.2548 49.787 25 49.787C11.7452 49.787 1 39.0418 1 25.787C1 12.5322 11.7452 1.78699 25 1.78699C38.2548 1.78699 49 12.5322 49 25.787Z"
-                    stroke="black" stroke-width="2" />
-                  <path d="M33 24.787H17V26.787H33V24.787Z" fill="black" />
-                </svg>
-
               </a>
+              <div class="subcatalog-wrapper">
+                <ul class="subcatalog">
+                  <li class="subcatalog-column">
+                    <ul class="subcatalog-list">
+                      <li class="subcatalog-item">
+                        <a class="subcatalog-link" href="#"><span>Виртуальная реальность</span></a>
+                      </li>
+                      <li class="subcatalog-item">
+                        <a class="subcatalog-link" href="#"><span>Моноподы для селфи</span></a>
+                      </li>
+                      <li class="subcatalog-item">
+                        <a class="subcatalog-link" href="#"><span>Экшн-камеры</span></a>
+                      </li>
+                    </ul>
+
+                  </li>
+
+                  <li class="subcatalog-column">
+                    <ul class="subcatalog-list">
+                      <li class="subcatalog-item">
+                        <a class=" subcatalog-link" href="#"><span>Фитнес-браслеты</span></a>
+                      </li>
+                      <li class="subcatalog-item">
+                        <a class="subcatalog-link" href="#"><span>Умные часы</span></a>
+                      </li>
+                    </ul>
+                  </li>
+
+                  <li class="subcatalog-column">
+                    <ul class="subcatalog-list">
+                      <li class="subcatalog-item">
+                        <a class="subcatalog-link" href=""><span>Квадрокоптеры</span></a>
+                      </li>
+                    </ul>
+                  </li>
+                </ul>
+              </div>
             </li>
-            <li class="navigation-item ">
+
+            <li class="navigation-item">
               <a class="navigation-link navigation-link-1" href="delivery.html"><span>Доставка</span></a>
             </li>
-            <li class="navigation-item ">
+            <li class="navigation-item">
               <a class="navigation-link navigation-link-2" href="guarantee.html"><span>Гарантия</span></a>
             </li>
-            <li class="navigation-item ">
+            <li class="navigation-item">
               <a class="navigation-link navigation-link-3" href="contacts.html"><span>Контакты</span></a>
             </li>
           </ul>
