--- a/product.html
+++ b/product.html
@@ -188,7 +188,7 @@
               </fieldset>
 
               <fieldset class="product-filter-group">
-                <legend class="product-filter-group-title">Цвет</legend>
+                <legend class="product-filter-group-title title-color">Цвет</legend>
                 <ul class="product-filter-list">
                   <li class="product-filter-item">
                     <label class="control">
@@ -230,8 +230,8 @@
                 </ul>
               </fieldset>
 
-              <fieldset class="product-filter-group">
-                <legend class="product-filter-group-title">Bluetooth</legend>
+              <fieldset class="product-filter-group product-filter-group-bluetooth">
+                <legend class="product-filter-group-title title-bluetooth">Bluetooth</legend>
                 <ul class="product-filter-list">
                   <li class="product-filter-item">
                     <label class="control">
@@ -309,7 +309,7 @@
                     <div class="text-product-wrapper">
 
                       <h3 class="text product-card-title">Профессиональная <br> селфи-палка</h3>
-                      <span class="text product-card-price">1500 ₽</span>
+                      <span class="text product-card-price">1 500 ₽</span>
                     </div>
                   </a>
                 </li>
@@ -324,7 +324,7 @@
                     </div>
                     <div class="text-product-wrapper">
                       <h3 class="text product-card-title">Непотопляемая <br> селфи-палка</h3>
-                      <span class="text product-card-price">2500 ₽</span>
+                      <span class="text product-card-price">2 500 ₽</span>
                     </div>
                   </a>
                 </li>
@@ -339,7 +339,7 @@
                     </div>
                     <div class="text-product-wrapper">
                       <h3 class="text product-card-title">Селфи-палка «Следуй <br> за мной</h3>
-                      <span class="text product-card-price">1500 ₽</span>
+                      <span class="text product-card-price">1 500 ₽</span>
                     </div>
                   </a>
                 </li>
@@ -350,12 +350,12 @@
               <div class="pagination">
                 <ul class="pagination-list">
                   <li class="pagination-item">
-                    <a class="button pagination-prev pagination-disabled">
+                    <a class="button pagination-prev pagination-disabled" href="#">
                       <span>Назад</span>
                     </a>
                   </li>
                   <li class="pagination-item">
-                    <a class="text pagination-link pagination-current"><span>1</span></a>
+                    <a class="text pagination-link pagination-current" href="#"><span>1</span></a>
                   </li>
                   <li class="pagination-item">
                     <a class="text pagination-link" href="#"><span>2</span></a>
